--- a/src/main/resources/templates/riesgo_view.html
+++ b/src/main/resources/templates/riesgo_view.html
@@ -294,6 +294,7 @@ and open the template in the editor.
 										<div class="">
 										
 											<a href="#" onClick="cargarContenido('/riesgos/');return false;" class="btn btn-danger">Cancelar</a>
+											<a class="btn btn-success" th:href="@{/riesgos/create}"  id="nuevo" >Nuevo</a>
 											
 											
 													
