--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -142,6 +142,8 @@
       <legend>Busqueda  </legend>
       <ul class="nav nav-pills nav-stacked">
         <li class="active"><a href="" onClick="cargarContenido('/reportes/mapaDeRiesgo');return false;">Mapa de Riesgo</a></li>
+        <li class="active"><a href="/riesgos/export/excel" >Exportar a Excel</a></li>
+        
       </ul>
       <br>
    </div>   
