se agrega la carga el proyecto a la carga del riesgo

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -435,8 +435,9 @@
   			<input type="radio" id="aprobados" th:field="*{filtro}" value="Aprobados">
  		    <label for="female">Aprobados</label><br>
  			<input type="radio" id="noAprobados" th:field="*{filtro}" value="No Aprobados">
-			<label for="other">No Aprobados</label>
-
+			<label for="other">No Aprobados</label><br>
+			<input type="radio" id="faltaProyecto" th:field="*{filtro}" value="FaltaProyecto">
+			<label for="other">Falta la carga del Proyecto</label>
 		</div>
 </div>
 
