--- a/src/main/resources/templates/riesgos.html
+++ b/src/main/resources/templates/riesgos.html
@@ -31,7 +31,13 @@ and open the template in the editor.
 						<div class="col-sm-3"><a class="btn btn-sm btn-success" th:href="@{/riesgos/create}" >Nuevo</a></div>					
 					</div>	
 					<div class="panel-body row" ><!--dentro del panel body va mi contenido-->
+					
+						<span th:if="${riesgos.empty}">
+							 No se encontraron resultados!!!!!
+						</span>
 
+				    	<span th:if="${!riesgos.empty}">
+				
 						<table class="table table-responsive table-striped table-hover table-bordered">
 							<thead class="bg-success">
 								<tr>
@@ -39,6 +45,7 @@ and open the template in the editor.
 									<th> Responsable</th>
 									<th> Fecha</th>
 									<th> Origen</th>
+									<th> Proyecto</th>
 									<th> Creador</th>
 									<th> Auditor</th>
 									<th> </th>										
@@ -47,11 +54,13 @@ and open the template in the editor.
 								</tr>
 							</thead>
 							<tbody>
+								
 								<tr th:each="riesgo : ${riesgos}">
 									<td th:text="${riesgo.id}"></td>
 									<td th:text="${riesgo.responsable}"></td>
 									<td th:text="${#temporals.format(riesgo.fechaAnalisis, 'dd/MM/yyyy')}"></td>
 									<td th:text="${riesgo.amenaza?.origen?.origen}"></td>
+									<td th:text="${not #lists.isEmpty(riesgo.proyectos) ? riesgo.proyectos[0]?.id : ''}"></td> <!-- Asumo que solo tiene un proyecto asociado -->
 									<td th:text="${riesgo.usuarioCreador.email}"></td>
 									<td th:text="${riesgo.usuarioAuditor?.email}"></td>
 		
@@ -93,12 +102,12 @@ and open the template in the editor.
 								                        </div>
 								                    </div>
 								                </div>
-								                </form>
+								                
 									</td>
 								</tr>
 							</tbody>
 						</table>
-
+                       </span>
 					</div>
 				</div>
 
