--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -61,6 +61,7 @@
             <li><a href="#" onClick="cargarContenido('/riesgos/');return false;">Riesgos</a></li>
             <li><a href="#" onClick="cargarContenido('/auditoria/');return false;">Auditoria</a></li>
             <li><a href="#" onClick="cargarContenido('/proyectos/');return false;">Proyectos</a></li>
+            <li><a href="#" onClick="cargarContenido('/eventos/');return false;">Eventos</a></li>
             <li><a href="#" onClick="cargarContenido('/reportes/');return false;">Reportes</a></li>
             
           </ul>
