se agrega el spinner y habilitacion/deshabilitacion del boton guardar en la pantalla de eventos

--- a/src/main/resources/templates/evento_create.html
+++ b/src/main/resources/templates/evento_create.html
@@ -7,17 +7,38 @@ and open the template in the editor.
 <html xmlns="http://www.w3.org/1999/xhtml"      xmlns:th="http://www.thymeleaf.org">
 
 <head><div th:replace="fragments ::app_head('titulo')"></div></head>
+<style type="text/css" media="screen">
 
+.spinner {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-left: -50px; /* half width of the spinner gif */
+    margin-top: -50px; /* half height of the spinner gif */
+    text-align:center;
+    z-index:1234;
+    overflow: auto;
+    width: 100px; /* width of the spinner gif */
+    height: 102px; /*hight of the spinner gif +2px to fix IE8 issue */
+}
+
+.isa_error {
+    color: #D8000C;
+    background-color: #FFD2D2;
+}
+</style>
 
 </head>
 <body>
+  <div id="spinner" class="spinner" style="display:none;">
+   			 <img id="img-spinner" src="/img/spinner.gif" alt="Loading"/>
+	</div>
 	<div class="container-fluid"> <!-- contenedor de pagina-->
 
 		<div th:replace="fragments ::navbartop"></div> <!-- Menu superior --> 	
 
 		<div id="result"  class="row"> <!-- fila contine menuj lateral 3 col,  principal 9 col -->
 			 
-
 			<!-- Contenido principal full page -->
 			<div class="col-sm-12">
 				
@@ -29,7 +50,7 @@ and open the template in the editor.
 				
 
 	    <!--<iframe name="formFrame" th:src="@{/cotizaciones/save}" frameborder="0" style="display:none"></iframe>--> 
-							<form class="form-horizontal" method="POST" th:action="@{/eventos/save}" th:object="${eventoDTO}" >
+							<form class="form-horizontal" method="POST" th:action="@{/eventos/save}" onsubmit="return validation()"  th:object="${eventoDTO}" >
 							<fieldset>
 
 								<!-- Form Name -->
@@ -40,7 +61,7 @@ and open the template in the editor.
 										<div class="form-group">
 											<label class="col-md-4 control-label" for="numeroDeRiesgo">Numero de Riesgo</label>											
 											<div class="col-md-4">
-												<select id="riesgo" required th:field="*{evento.riesgo}"  class="form-control"  >
+												<select id="riesgo" required onchange="enableSaveButton()" th:field="*{evento.riesgo}"  class="form-control"  >
 													<option value=""></option>
 													<option  th:each="riesgo : ${dataMaster.riesgos}" 
 												th:value="${riesgo.id}" th:text="${riesgo.id}">  </option>
@@ -52,7 +73,7 @@ and open the template in the editor.
 								<div class="form-group">
 									<label class="col-md-4 control-label" for="txtFecha">Fecha</label>  
 									<div class="col-md-4">
-										<input id="fechaI" name="fechaI" th:field="*{fecha}" th:min="*{today}"  required="required" type="date" placeholder="fecha Inicio" class="form-control input-md">
+										<input id="fechaI" name="fechaI" th:field="*{fecha}"  onchange="enableSaveButton()" required="required" type="date" placeholder="fecha Inicio" class="form-control input-md">
 
 									</div>
 								</div>		
@@ -61,7 +82,7 @@ and open the template in the editor.
 									<div class="form-group">
 										<label class="col-md-4  control-label" for="descripcion">Descripcion</label>
 										<div class="col-md-4">                     
-											<textarea class="form-control" id="descripcion" required="required" th:field="*{evento.descripcion}"  ></textarea>
+											<textarea class="form-control" id="descripcion" required="required" onkeypress="enableSaveButton()" th:field="*{evento.descripcion}"  ></textarea>
 										</div>
 									</div>
 
@@ -70,7 +91,7 @@ and open the template in the editor.
 								<div class="form-group">
 									<label class="col-md-4 control-label" for="btnGuardar"></label>
 									<div class="col-md-4">
-										<button id="btnGuardar" name="guardar" class="btn btn-success" type="submit">Guardar</button>
+										<button id="btnGuardar" name="guardar" class="btn btn-success" disabled type="submit">Guardar</button>
 										<a href="#" onClick="cargarContenido('/eventos/');return false;" class="btn btn-danger">Cancelar</a>
 										
 									</div>
@@ -90,6 +111,18 @@ and open the template in the editor.
 		
 
 	</div>	<!-- fin contenedor de pagina-->
+<script type="text/javascript">
 
+	function validation() {
+	     
+				$('#spinner').show();
+				return true;
+		
+	}
+	
+	function enableSaveButton() {
+		$('#btnGuardar').prop('disabled', false);
+	}
+</script>
 </body>
 </html>
