--- a/src/main/resources/templates/proyecto_create.html
+++ b/src/main/resources/templates/proyecto_create.html
@@ -126,6 +126,9 @@ and open the template in the editor.
 									<div class="col-md-4">
 										<button id="btnGuardar" name="guardar" class="btn btn-success" type="submit">Guardar</button>
 										<a href="#" onClick="cargarContenido('/proyectos/');return false;" class="btn btn-danger">Cancelar</a>
+										<span th:if="*{proyecto.id!=null}">
+								               <a class="btn btn-success" th:href="@{/proyectos/create}"  id="nuevo" >Nuevo</a>
+										</span>
 										
 									</div>
 								</div>
