--- a/src/main/resources/templates/riesgo_audit.html
+++ b/src/main/resources/templates/riesgo_audit.html
@@ -20,27 +20,32 @@ and open the template in the editor.
 
 			<!-- Contenido principal 9 columnas -->
 			<div class="col-sm-9">
-<div class="spinner-border"></div>
-				<div class="panel panel-default">
+
+		
 					<div class= "panel-heading row">
 
 						<div class="col-sm-6"><h2>Riesgo Auditoria</h2></div>				
 					</div>	
 					<div class="panel-body row" ><!--dentro del panel body va mi contenido-->
 
-						<table class="table table-responsive table-striped table-hover table-bordered">
+						<table class="table table-responsive  table-bordered">
 							<thead class="bg-success">
 								<tr>
 									<th> Código </th>
 									<th> Responsable</th>
 									<th> Fecha</th>
-									<th> Origen</th>
-									<th> Tipo</th>
 									<th> Riesgo Inherente</th>
+									<th> Riesgo Residual</th>
 									<th> Impacto</th>
 									<th> Probabiliadad de Ocurrencia</th>
-									<th> Creador</th>
-									<th> Editor</th>
+									<th> Descripcion</th>
+									<th> Origen Amenaza</th>
+									<th> Tipo Amenza</th>
+									<th> Proyecto Asociado</th>
+									<th> Codigo Formulario</th>
+									<th> Afecta Disponibilidad</th>
+									<th> Afecta Donfiabilidad</th>
+									<th> Afecta Integridad</th>
 									<th> Fecha</th>
 
 								</tr>
@@ -48,20 +53,21 @@ and open the template in the editor.
 							<tbody>
 								<tr th:each="audit : ${auditRiesgosDTO}">
 									<td th:text="${audit.riesgo.id}"></td>
-									<td th:text="${audit.riesgo.responsable}"></td>
-									<td th:text="${#temporals.format(audit.riesgo.fechaAnalisis, 'dd/MM/yyyy')}"></td>
-									<td th:text="${audit.riesgo.amenaza?.origen?.origen}"></td>
-									<td th:text="${audit.riesgo.amenaza.tipo}"></td>
-									<td th:text="${audit.riesgo.riesgoInherenteValor.riesgoInherente.calificacion}"></td>
-									<td th:text="${audit.riesgo.impacto.calificacion}"></td>
-									<td th:text="${audit.riesgo.probabilidadOcurrencia.calificacion}"></td>
-									<td th:text="${audit.riesgo.usuarioCreador.email}"></td>
-									<td th:text="${audit.revision.userName}"></td>
+									<td th:class="${audit.diffResponsable}" th:text="${audit.riesgo.responsable}"></td>
+									<td th:class="${audit.diffFechaAnalisis}" th:text="${#temporals.format(audit.riesgo.fechaAnalisis, 'dd/MM/yyyy')}"></td>
+									<td th:class="${audit.diffRiesgoInherente}" th:text="${audit.riesgo.riesgoInherenteValor.riesgoInherente.calificacion}"></td>
+									<td th:class="${audit.diffRiesgoResidual}" th:text="${audit.riesgo.riesgoResidualValor.riesgoResidual.calificacion}"></td>
+									<td th:class="${audit.diffImpacto}" th:text="${audit.riesgo.impacto.calificacion}"></td>
+									<td th:class="${audit.diffProbabilidadOcurrencia}" th:text="${audit.riesgo.probabilidadOcurrencia.calificacion}"></td>
+									<td th:class="${audit.diffDescripcion}" th:text="${audit.riesgo.descripcion}"></td>
+									<td th:class="${audit.diffAmenaza}" th:text="${audit.riesgo.amenaza?.origen?.origen}"  ></td>
+									<td th:class="${audit.diffTipoAmenaza}" th:text="${audit.riesgo.amenaza.tipo}"></td>
+									<td th:class="${audit.diffProyecto}" th:text="${not #lists.isEmpty(audit.riesgo.proyectos) ? audit.riesgo.proyectos[0]?.id : ''}">
+									<td th:class="${audit.diffFormulario}" th:text="${audit.riesgo.codigoFormulario}"></td>
+									<td th:class="${audit.diffAfectaDisponibilidad}" th:text="${audit.riesgo.afectaDisponibilidadAsString}"></td>
+									<td th:class="${audit.diffAfectaConfidencialidad}" th:text="${audit.riesgo.afectaConfidencialidadAsString}"></td>
+									<td th:class="${audit.diffAfectaIntegridad}" th:text="${audit.riesgo.afectaIntegridadAsString}"></td>
 									<td th:text="${#temporals.format(audit.revision.revisionDateTime, 'dd/MM/yyyy HH:mm')}"></td>
-
-						         </form>
-						         
-									</td>
 								</tr>
 								
 							</tbody>
@@ -69,17 +75,18 @@ and open the template in the editor.
 						</table>
 
 					</div>
-					
+					<a href="#" onClick="cargarContenido('/riesgos/');return false;" class="btn btn-danger">Cancelar</a>
 				</div>
 				
 				
-				<a href="#" onClick="cargarContenido('/riesgos/');return false;" class="btn btn-danger">Cancelar</a>
+				
 
 			</div> <!-- Fin Contenido principal 9 columnas -->
           
         <!---------------Fin codigo unico de la pagina-------------------------->
 		</div>	<!-- fila ROW contine menuj lateral 3 col,  principal 9 col -->
 	<!-- fin contenedor de pagina-->
+
 
 </body>
 </html>
