--- a/src/main/resources/templates/activos_fisicos.html
+++ b/src/main/resources/templates/activos_fisicos.html
@@ -32,6 +32,10 @@ and open the template in the editor.
 					</div>	
 					<div class="panel-body row" ><!--dentro del panel body va mi contenido-->
 
+						<span th:if="${searchDTO.contents.empty}">
+							 No se encontraron resultados!!!!!
+						</span>
+						<span th:if="${!searchDTO.contents.empty}">
 						<table class="table table-responsive table-striped table-hover table-bordered">
 							<thead class="bg-success">
 								<tr>
@@ -44,7 +48,7 @@ and open the template in the editor.
 								</tr>
 							</thead>
 							<tbody>
-								<tr th:each="activo : ${activosFisicos}">
+								<tr th:each="activo : ${searchDTO.contents}">
 									<td th:text="${activo.codigo}"></td>
 									<td th:text="${activo.nombre}"></td>
 									<td th:text="${activo.tipo.valor}"></td>
@@ -82,10 +86,10 @@ and open the template in the editor.
 								</tr>
 							</tbody>
 						</table>
-
+					</span>
 					</div>
 				</div>
-
+				<div th:replace="pagination"></div>
 			</div> <!-- Fin Contenido principal 9 columnas -->
 
 			<!---------------Fin codigo unico de la pagina-------------------------->
