--- a/src/main/resources/templates/riesgos.html
+++ b/src/main/resources/templates/riesgos.html
@@ -32,11 +32,11 @@ and open the template in the editor.
 					</div>	
 					<div class="panel-body row" ><!--dentro del panel body va mi contenido-->
 					
-						<span th:if="${riesgos.empty}">
+						<span th:if="${searchDTO.contents.empty}">
 							 No se encontraron resultados!!!!!
 						</span>
 
-				    	<span th:if="${!riesgos.empty}">
+				    	<span th:if="${!searchDTO.contents.empty}">
 				
 						<table class="table table-responsive table-striped table-hover table-bordered">
 							<thead class="bg-success">
@@ -55,7 +55,7 @@ and open the template in the editor.
 							</thead>
 							<tbody>
 								
-								<tr th:each="riesgo : ${riesgos}">
+								<tr th:each="riesgo : ${searchDTO.contents}">
 									<td th:text="${riesgo.id}"></td>
 									<td th:text="${riesgo.responsable}"></td>
 									<td th:text="${#temporals.format(riesgo.fechaAnalisis, 'dd/MM/yyyy')}"></td>
@@ -107,10 +107,14 @@ and open the template in the editor.
 								</tr>
 							</tbody>
 						</table>
+						
+
                        </span>
 					</div>
 				</div>
-
+				
+				<div th:replace="pagination"></div>
+				
 			</div> <!-- Fin Contenido principal 9 columnas -->
 
 			<!---------------Fin codigo unico de la pagina-------------------------->
